fix navbar spacing (#7)

--- a/src/pages/auth/register/register.css
+++ b/src/pages/auth/register/register.css
@@ -2,8 +2,10 @@
 .nav_bar {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 2rem;
+    justify-content: space-between;
+    margin: 2rem auto;
+    padding: 0 2rem;
+    max-width: 150vh;
 }
 
 .nav_bar * {
